# vscode-qt

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
cmake/: AutoSearch.cmake  ColorLog.cmake  QtMust.cmake  sub_template.cmake
qrc/: image.qrc  pic.qrc
src/: main.cpp
toolkit/: mingw81_64.cmake
